send fullness telemetry to Adafruit IO base code

--- a/waste_watcher_adafruitIO/platformio.ini
+++ b/waste_watcher_adafruitIO/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = esp32cam
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	adafruit/Adafruit MQTT Library@^2.4.2
+	adafruit/Adafruit IO Arduino@^4.1.1
