refactoring Image related code

--- a/waste_watcher_adafruitIO/.vscode/settings.json
+++ b/waste_watcher_adafruitIO/.vscode/settings.json
@@ -1,5 +1,11 @@
 {
     "files.associations": {
-        "iterator": "cpp"
+        "iterator": "cpp",
+        "fstream": "cpp",
+        "iosfwd": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "sstream": "cpp",
+        "streambuf": "cpp"
     }
 }
