use pubsub library instead and use macros toggling debugging

--- a/waste_watcher_adafruitIO/platformio.ini
+++ b/waste_watcher_adafruitIO/platformio.ini
@@ -13,6 +13,21 @@ platform = espressif32
 board = esp32cam
 framework = arduino
 monitor_speed = 115200
+build_flags = 
+	-DMQTT_MAX_PACKET_SIZE=36000
+	-DNDEBUG
 lib_deps = 
-	adafruit/Adafruit MQTT Library@^2.4.2
-	adafruit/Adafruit IO Arduino@^4.1.1
+	PubSubClient@2.7
+
+[env:debuging]
+platform = espressif32
+board = esp32cam
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+	-DMQTT_MAX_PACKET_SIZE=36000
+	; Define NDEBUG to remove  debugging functions & add any other build flags
+lib_deps = 
+	PubSubClient@2.7
+
+
