remove extra statements

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build in seeed_wio_terminal Environment
       run: |
         cd waste_watcher_adafruitIO/
-        platformio run --platformio run --environment esp32cam
+        platformio run --environment esp32cam
