add a config file for ci testing

--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -20,4 +20,4 @@ jobs:
     - name: Build in esp32cam Environment
       run: |
         cd waste_watcher_adafruitIO/
-        platformio run --environment esp32cam
+        platformio run --environment ci-test
