--- a/waste_watcher_adafruitIO/platformio.ini
+++ b/waste_watcher_adafruitIO/platformio.ini
@@ -15,7 +15,20 @@ framework = arduino
 monitor_speed = 115200
 build_flags = 
 	-DMQTT_MAX_PACKET_SIZE=36000
+	; Define NDEBUG (Not debug) to remove debugging functions & add any other build flags
 	-DNDEBUG
+lib_deps = 
+	PubSubClient@2.7
+
+[env:ci-test]
+platform = espressif32
+board = esp32cam
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+	-DMQTT_MAX_PACKET_SIZE=36000
+	; Define CI (Continuous Integration Testing) 
+	-DCI
 lib_deps = 
 	PubSubClient@2.7
 
@@ -26,7 +39,6 @@ framework = arduino
 monitor_speed = 115200
 build_flags = 
 	-DMQTT_MAX_PACKET_SIZE=36000
-	; Define NDEBUG to remove  debugging functions & add any other build flags
 lib_deps = 
 	PubSubClient@2.7
 
