--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -13,6 +13,15 @@
       "contributions": [
         "review"
       ]
+    },
+    {
+      "login": "patrickanguyen",
+      "name": "Patrick Nguyen",
+      "avatar_url": "https://avatars.githubusercontent.com/u/41417417?v=4",
+      "contributions": [
+        "code",
+        "review"
+      ]
     }
   ],
   "contributorsPerLine": 7,
